; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-cluster.c_unpackreq_number.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-cluster.c_unpackreq_number.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [34 x i8] c"Invalid cluster message (size=%d)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32)* @unpackreq_number to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @unpackreq_number(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i32, i32* %7, align 4
  %11 = icmp slt i32 %10, 9
  br i1 %11, label %12, label %16

12:                                               ; preds = %3
  %13 = load i32*, i32** %5, align 8
  %14 = load i32, i32* %7, align 4
  %15 = call i32 @luaL_error(i32* %13, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i32 %14)
  store i32 %15, i32* %4, align 4
  br label %44

16:                                               ; preds = %3
  %17 = load i32*, i32** %6, align 8
  %18 = getelementptr inbounds i32, i32* %17, i64 1
  %19 = call i64 @unpack_uint32(i32* %18)
  store i64 %19, i64* %8, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 5
  %22 = call i64 @unpack_uint32(i32* %21)
  store i64 %22, i64* %9, align 8
  %23 = load i32*, i32** %5, align 8
  %24 = load i64, i64* %8, align 8
  %25 = call i32 @lua_pushinteger(i32* %23, i64 %24)
  %26 = load i32*, i32** %5, align 8
  %27 = load i64, i64* %9, align 8
  %28 = call i32 @lua_pushinteger(i32* %26, i64 %27)
  %29 = load i32*, i32** %5, align 8
  %30 = load i32*, i32** %6, align 8
  %31 = bitcast i32* %30 to i8*
  %32 = getelementptr inbounds i8, i8* %31, i64 9
  %33 = load i32, i32* %7, align 4
  %34 = sub nsw i32 %33, 9
  %35 = call i32 @return_buffer(i32* %29, i8* %32, i32 %34)
  %36 = load i64, i64* %9, align 8
  %37 = icmp eq i64 %36, 0
  br i1 %37, label %38, label %43

38:                                               ; preds = %16
  %39 = load i32*, i32** %5, align 8
  %40 = call i32 @lua_pushnil(i32* %39)
  %41 = load i32*, i32** %5, align 8
  %42 = call i32 @lua_pushboolean(i32* %41, i32 1)
  store i32 6, i32* %4, align 4
  br label %44

43:                                               ; preds = %16
  store i32 4, i32* %4, align 4
  br label %44

44:                                               ; preds = %43, %38, %12
  %45 = load i32, i32* %4, align 4
  ret i32 %45
}

declare dso_local i32 @luaL_error(i32*, i8*, i32) #1

declare dso_local i64 @unpack_uint32(i32*) #1

declare dso_local i32 @lua_pushinteger(i32*, i64) #1

declare dso_local i32 @return_buffer(i32*, i8*, i32) #1

declare dso_local i32 @lua_pushnil(i32*) #1

declare dso_local i32 @lua_pushboolean(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
